# energy_project

./: .gitignore  .pre-commit-config.yaml  README.md  add_weather_data.py  collect_carbon_data.py  pyproject.toml
.github/workflows/: ruff.yml
